HIVE-13107: LLAP: Rotate GC logs periodically to prevent full disks (Gopal V, reviewed by Prasanth Jayachandran)